@@ -45,6 +45,7 @@
 25. When dropping files onto playqueue, check that they have a recognized
     extension (mp3, ogg, flac, wma, m4a, m4b, mp4, m4p, wav, wv, wvp, aiff,
     aif, aifc, ape, spx, tta, mpc, mpp, mp+, dff, dsf)
+26. Add import of IceCast and SomaFM streams.
 
 0.9.2
 -----
